# mars

./: .gitignore  ARCHITECTURE.md  BACKLOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  LICENSE-DATA  NOTICE  README.md  ROADMAP.md  cortex.toml  pyproject.toml
docs/: AGENTIC_EVALS.md  APOLLO.md  AUTODEV_EXECUTION_IMPACT_WIRING.md  SALIENCE_MEMORY_BENCHMARK_V1.md  SALIENCE_MEMORY_CONFIDENCE_AND_CONTRADICTION.md  SALIENCE_MEMORY_EXECUTION_IMPACT.md  SALIENCE_MEMORY_EXPERIMENT_READINESS.md  SALIENCE_MEMORY_NOISY_IMPORTANCE.md  SALIENCE_MEMORY_TEMPORAL_SALIENCE.md  SALIENCE_MEMORY_V1.md  SALIENCE_MEMORY_V1_EXPANDED.md  SALIENCE_MEMORY_V1_RESULTS.md  claude_code_mars_boostrap.md  salience-memory-v2-proposal.md
docs/interview/: INTERVIEW_PACKET_REVIEW.md  RESEARCH_INTERVIEW_PACKET.md
docs/papers/: APPENDIX_PLAN.md  CITATION_TEXT.md  FIGURE_PLAN.md  FIGURE_REVIEW.md  FINAL_PAPER_REVIEW.md  TABLE_PLAN.md  arxiv_v2_outline.md  citation.bib  (+3 more)
experiments/: analyze_exec_impact_5_1.py  issues.example.yaml  launch_exec_impact_5_1.py  run_confidence_contradiction.py  run_execution_impact.py  run_expanded_benchmark.py  run_noisy_importance.py  run_temporal_salience.py  salience-memory-v1.yaml  seed_autodev_memory.py  verify_exec_impact_5_1_divergence.py
mars/: __init__.py  agents.py  cli.py  fixtures.py  models.py  suites.py
suites/: backend-api-suite.yaml  infra-suite.yaml
tests/: conftest.py  test_agentic_eval.py  test_apollo.py  test_autodev_mcp.py  test_benchmark_freeze.py  test_confidence_contradiction.py  test_corpus_seeding.py  test_cortex_mcp.py  test_engine_and_storage.py  test_execution_impact.py  test_execution_impact_real.py  test_expanded_corpus.py  test_memory.py  test_models_and_suites.py  test_noisy_importance.py  test_providers.py  test_reporting_and_cli.py  test_salience_v1.py  test_scoring.py  test_temporal_salience.py
(+81 files in other folders)
