[project]
name = "mars"
version = "0.1.0"
description = "Continuous evaluation for AI software engineering agents."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "sqlalchemy>=2.0",
    "rich>=13.7",
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mcp>=1.2",
]
# Real AutoDev/Cortex MCP transport. Optional: Mars runs on mocks without it.
mcp = [
    "mcp>=1.2",
]

[project.scripts]
mars = "mars.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mars"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# Domain model 'TestResult' is not a test class; don't collect it.
python_classes = "Test*Case"

[tool.mars]
# Bundled benchmark suite definitions live here.
suites_dir = "suites"
